# next-space-rebels-calculator

./: .gitignore  calculateCombinations.js  count_specific_tags.json  filtered_tags.json  finalTags.json  index.html  output.d.ts  output.js  output.wasm  output.wasm.map  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  server.js  source.ts  styles.css  tags.json  tags.test.json  tags.ts  tsconfig.json  vite.config.js  vite.config.ts
assembly/: bindings.ts  index.ts
cpp/: CMakeLists.txt  data_preprocessing.cpp  data_preprocessing.h  main.cpp  vcpkg.json
cpp/src/: best chain.txt  data_preprocessing.cpp  data_preprocessing.h  dfs.cpp  dfs.h  main.cpp
src/: comboUtils.ts  createButtons.ts  displayUtils.ts  eventHandlers.ts  functions.ts  index.ts  main.ts  math.ts  old.js  source.ts  styles.scss  tags.ts  utils.ts  worker.ts  xml-converter.ts
src/unused/: functions.ts  source.ts
